syntax = "proto3";

option go_package = ".;broker_msgs";

package broker_msgs;

import "google/protobuf/timestamp.proto";

enum SubscriptionStatus {
  CREATED = 0;
}

message Subscription {
  string dispatchID = 1;
  string baseCcy = 2;
  repeated string targetCcies = 3;
  SubscriptionStatus status = 4;
  string email = 5;
  google.protobuf.Timestamp sendAt = 6;
}

message SubscriptionMessage {
  string eventID = 1;
  string eventType = 2;
  google.protobuf.Timestamp timestamp = 3;
  Subscription payload = 4;
}
